🦶 footer overlap fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -336,6 +336,10 @@ article a:hover {
 	color: #000;
 }
 
+/* #content {
+	margin-bottom: 48px;
+} */
+
 .block {
 	display: block;
 }
@@ -357,7 +361,7 @@ article a:hover {
 }
 
 .page-navigation {
-	margin: 50px auto 0 auto;
+	margin: 48px auto;
 }
 
 .page-navigation a {
